# MARC

./: .gitignore  README.md  camera_calibration.npz  camera_stream.py  identify_aruco.py
ControlMoteur/: ControlMoteur.ino
assets/3d-models/: BagueDeReduction.step  BagueDeReduction.stl  ColonneV1.step  ColonneV3.step  Coque.step  Coque.stl  CorpsBasArriere.step  CorpsBasArriere.stl  CorpsBasAvant.step  CorpsBasAvant.stl  CorpsHautArriere.step  CorpsHautArriere.stl  CorpsHautAvant.step  CorpsHautAvant.stl  Etage0.step  Etage0.stl  Etage1.step  Etage1.stl  Etage2.step  Etage2.stl  Etage3.step  Etage3.stl  MatriceLed.step  MatriceLed.stl  Part8.step  Part8.stl  Porte.step  Porte.stl  Roue.step  Roue.stl  SupportTrackingSensor.step  SupportTrackingSensor.stl  TeteBas.step  TeteBas.stl  TeteHaut.step  TeteHaut.stl
assistantVocale/: voiceAssistant.py
controlMoteur/: controlMoteur.ino  fonctions.ino  header.h
src/marc_nodes/: package.xml  setup.cfg  setup.py
src/marc_nodes/launch/: marc.launch.py
src/marc_nodes/marc_nodes/: camera_node.py  firmware_node.py  led_node.py  localization_node.py  navigation_node.py  voice_node.py  webbridge_node.py
vision/: calibrate_camera.py  camera_service.py  localization.py  navigation_goto.py  navigation_service.py
web/: app.js  camera_service.py  index.html  localization.py  navigation_goto.py  server.py  style.css
